[gd_scene load_steps=39 format=3 uid="uid://8jmr8yn8vriq"]

[ext_resource type="Script" path="res://src/scripts/auth-scripts/login_ui.gd" id="1_v5dys"]
[ext_resource type="Texture2D" uid="uid://bmof2g6xlu2bf" path="res://src/ui/backgrounds/background.png" id="2_x5dwf"]
[ext_resource type="Texture2D" uid="uid://c6oisapi75ah0" path="res://src/ui/elements/auth_background.png" id="3_a17al"]
[ext_resource type="Texture2D" uid="uid://blr2v35pet8yb" path="res://src/ui/elements/input.png" id="4_70ttb"]
[ext_resource type="Texture2D" uid="uid://dmpyv16hdidiw" path="res://src/ui/checkboxes/Hide.png" id="5_v35h3"]
[ext_resource type="Texture2D" uid="uid://b6ihco5cpugkw" path="res://src/ui/checkboxes/Eye.png" id="6_lr44l"]
[ext_resource type="Texture2D" uid="uid://dw45alwojk1e" path="res://src/ui/checkboxes/remember копия (1).png" id="7_4b762"]
[ext_resource type="Texture2D" uid="uid://br8fsfct7rqtn" path="res://src/ui/checkboxes/remember off копия.png" id="8_pvexc"]
[ext_resource type="Texture2D" uid="uid://yacxa428bppa" path="res://src/ui/buttons/button_2.png" id="9_ksyfj"]
[ext_resource type="Texture2D" uid="uid://iivtf437avbt" path="res://src/ui/buttons/button.png" id="10_r0d8d"]
[ext_resource type="Texture2D" uid="uid://boontk5qqal0n" path="res://src/ui/buttons/enter button.png" id="11_dkifd"]
[ext_resource type="PackedScene" uid="uid://mea22juv2m6t" path="res://src/scenes/auth-scenes/failed_to_connect.tscn" id="13_r4bu3"]
[ext_resource type="Texture2D" uid="uid://6kvjconjmoj0" path="res://src/ui/buttons/support green.png" id="13_wu0o0"]
[ext_resource type="PackedScene" uid="uid://cx5etu0rvfai4" path="res://src/scenes/auth-scenes/waiting_response.tscn" id="14_mul5m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g80ue"]
texture = ExtResource("4_70ttb")
texture_margin_left = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e5gki"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k18xo"]
texture = ExtResource("9_ksyfj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q6kwe"]
texture = ExtResource("9_ksyfj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v8pjy"]
texture = ExtResource("9_ksyfj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gja7d"]
texture = ExtResource("9_ksyfj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xbiu1"]
texture = ExtResource("9_ksyfj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ei2v"]
texture = ExtResource("9_ksyfj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y8yyr"]
texture = ExtResource("9_ksyfj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nspu3"]
texture = ExtResource("9_ksyfj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3kkr4"]
texture = ExtResource("9_ksyfj")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v88gt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ug50c"]
texture = ExtResource("10_r0d8d")
texture_margin_left = 55.0
texture_margin_right = 50.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nj4nk"]
texture = ExtResource("10_r0d8d")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xlckv"]
texture = ExtResource("11_dkifd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mboba"]
texture = ExtResource("10_r0d8d")
texture_margin_left = 55.0
texture_margin_right = 50.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8taut"]
texture = ExtResource("10_r0d8d")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c224n"]
texture = ExtResource("11_dkifd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u7u7t"]
texture = ExtResource("10_r0d8d")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yyylc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ryqk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekwd1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bgawa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qrire"]

[node name="LoginUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -500.0
offset_bottom = -900.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_v5dys")
metadata/_edit_use_anchors_ = true

[node name="APIRequest" type="HTTPRequest" parent="."]

[node name="BackGround-Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -80.0
offset_right = 871.0
offset_bottom = 1699.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.775, 0.775)
pivot_offset = Vector2(0, 0.23)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_x5dwf")
stretch_mode = 4

[node name="AuthContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 28.0
offset_top = 50.0
offset_right = 472.0
offset_bottom = 687.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="AuthBackground" type="TextureRect" parent="AuthContainer"]
layout_mode = 2
texture = ExtResource("3_a17al")

[node name="LoginText" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 167.0
offset_top = 127.0
offset_right = 313.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginText" type="Label" parent="LoginText"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "Log in"

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
metadata/_edit_use_anchors_ = true

[node name="LoginInfoUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 55.0
offset_top = 213.0
offset_right = 459.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginInfoUI" type="Label" parent="UI/LoginInfoUI"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Login"

[node name="LoginDataUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 46.0
offset_top = 257.0
offset_right = 445.0
offset_bottom = 319.0
grow_horizontal = 2
grow_vertical = 2

[node name="Login" type="LineEdit" parent="UI/LoginDataUI"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxTexture_g80ue")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e5gki")

[node name="PasswordInfoUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 55.0
offset_top = 319.0
offset_right = 459.0
offset_bottom = 378.0
grow_horizontal = 2
grow_vertical = 2

[node name="PasswordInfoUI" type="Label" parent="UI/PasswordInfoUI"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Password"

[node name="PasswordDataUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 46.0
offset_top = 360.0
offset_right = 445.0
offset_bottom = 422.0
grow_horizontal = 2
grow_vertical = 2

[node name="Password" type="LineEdit" parent="UI/PasswordDataUI"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxTexture_g80ue")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e5gki")
secret = true

[node name="PasswordHideUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 393.0
offset_top = 373.0
offset_right = 430.0
offset_bottom = 407.0
grow_horizontal = 2
grow_vertical = 2

[node name="PasswordHideButton" type="TextureButton" parent="UI/PasswordHideUI"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_v35h3")
texture_pressed = ExtResource("6_lr44l")
ignore_texture_size = true
stretch_mode = 0

[node name="RememberMeUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 120.0
offset_top = 472.0
offset_right = 393.0
offset_bottom = 546.0
grow_horizontal = 2
grow_vertical = 2

[node name="RememberMeCheckBox" type="CheckBox" parent="UI/RememberMeUI"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
theme_override_icons/checked = ExtResource("7_4b762")
theme_override_icons/checked_disabled = ExtResource("7_4b762")
theme_override_icons/unchecked = ExtResource("8_pvexc")
theme_override_icons/unchecked_disabled = ExtResource("8_pvexc")
theme_override_icons/radio_unchecked = ExtResource("8_pvexc")
theme_override_icons/radio_unchecked_disabled = ExtResource("8_pvexc")
theme_override_styles/normal = SubResource("StyleBoxTexture_k18xo")
theme_override_styles/pressed = SubResource("StyleBoxTexture_q6kwe")
theme_override_styles/disabled = SubResource("StyleBoxTexture_v8pjy")
theme_override_styles/hover = SubResource("StyleBoxTexture_gja7d")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_xbiu1")
theme_override_styles/focus = SubResource("StyleBoxTexture_8ei2v")
text = "Remember me"

[node name="ForgotPasswordUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 124.0
offset_top = 567.0
offset_right = 390.0
offset_bottom = 644.0
grow_horizontal = 2
grow_vertical = 2

[node name="ForgotPasswordButton" type="Button" parent="UI/ForgotPasswordUI"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxTexture_y8yyr")
theme_override_styles/hover = SubResource("StyleBoxTexture_nspu3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3kkr4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v88gt")
text = "Forgot password?"

[node name="Navigation" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="NavigationContainer" type="HBoxContainer" parent="Navigation"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 35.5
offset_top = 732.0
offset_right = 465.5
offset_bottom = 819.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 11
alignment = 1

[node name="RegisterButton" type="Button" parent="Navigation/NavigationContainer"]
layout_direction = 1
layout_mode = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxTexture_ug50c")
theme_override_styles/hover = SubResource("StyleBoxTexture_nj4nk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xlckv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v88gt")
text = "Register"

[node name="LoginButton" type="Button" parent="Navigation/NavigationContainer"]
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxTexture_mboba")
theme_override_styles/hover = SubResource("StyleBoxTexture_8taut")
theme_override_styles/pressed = SubResource("StyleBoxTexture_c224n")
theme_override_styles/disabled = SubResource("StyleBoxTexture_u7u7t")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yyylc")
text = "Log in"

[node name="TechSupportUI" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 139.0
offset_top = 827.0
offset_right = 361.0
offset_bottom = 875.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TechSupportButton" type="Button" parent="TechSupportUI"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxEmpty_1ryqk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ekwd1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bgawa")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qrire")
text = "Tech support"
icon = ExtResource("13_wu0o0")
icon_alignment = 2

[node name="FailedToConnect" parent="." instance=ExtResource("13_r4bu3")]
visible = false
layout_mode = 1

[node name="WaitingResponse" parent="." instance=ExtResource("14_mul5m")]
visible = false
layout_mode = 1

[connection signal="request_completed" from="APIRequest" to="." method="_on_http_request_request_completed"]
[connection signal="toggled" from="UI/PasswordHideUI/PasswordHideButton" to="." method="_on_password_hide_button_toggled"]
[connection signal="toggled" from="UI/RememberMeUI/RememberMeCheckBox" to="." method="_on_remember_me_check_box_toggled"]
[connection signal="pressed" from="UI/ForgotPasswordUI/ForgotPasswordButton" to="." method="_on_forgot_password_button_pressed"]
[connection signal="pressed" from="Navigation/NavigationContainer/RegisterButton" to="." method="_on_sign_up_button_pressed"]
[connection signal="pressed" from="Navigation/NavigationContainer/LoginButton" to="." method="_on_login_button_pressed"]
